Refactor after some feedback from Testcontainer maintainer
- Remove the notion of a 'pseudo' container. Instead, the
  GemFireClusterContainer is now, effectively, the locator and handles
  startup of the proxy and actual server containers (in addition to,
  itself, managing the locator)..
- Remove the GemFireLocatorContainer
- Add more tests
- Ensure that we can run Junit 4 tests from gradle